fixed spacing for mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -46,6 +46,7 @@
   margin-left: 1vw;
   margin-right: 1em;
   margin: 0 1rem;
+  margin-bottom: 2em;
   /* margin-bottom: 3rem;
   padding-bottom: 1rem; */
   /* border-bottom: 2px solid #f8d210; */
@@ -63,7 +64,8 @@
 .missionContentConatiner {
   width: 55vw;
   padding: 0 2vw;
-  margin-top: 4em;
+  margin-top: 2em;
+  margin-bottom: 2em;
   padding-bottom: 3rem;
   border-bottom: 2px solid #f8d110de;
 }
